syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

message Sum {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}

message PrimeNumberRequest {
    int32 number = 1;
}

message PrimeNumberResponse {
    int32 prime = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    float average = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse) {};

    // server streaming
    rpc PrimeStream (PrimeNumberRequest) returns (stream PrimeNumberResponse);

    // client streaming
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse);
}
